--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,8 @@ edition = "2018"
 clap = "~2.27.0"
 path_abs = "~0.4"
 dirs = "1.0.5"
+
+[dependencies.gtk]
+version = "0.6.0"
+features = ["v3_16"]
+
