--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "mkdesktop"
 version = "0.1.0"
 authors = ["Nigel Baillie <metreckk@gmail.com>"]
 edition = "2018"
+build = "build.rs"
 
 [dependencies]
 clap = "~2.27.0"
