--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ path_abs = "~0.4"
 dirs = "1.0.5"
 regex = "1"
 lazy_static = "1.3.0"
+gdk-pixbuf = "0.6.0"
 
 [dependencies.gtk]
 version = "0.6.0"
