--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ regex = "1"
 lazy_static = "1.3.0"
 gdk-pixbuf = "0.6.0"
 glib = "0.7.1"
+gio = "0.6.0"
+inotify = "0.7"
 
 [dependencies.gtk]
 version = "0.6.0"
