--- a/libs/desktop-lib/Cargo.toml
+++ b/libs/desktop-lib/Cargo.toml
@@ -1,9 +1,12 @@
 [package]
-name = "desktop_lib"
+name = "desktop-lib"
 version = "0.1.0"
 authors = ["Nigel Baillie <metreckk@gmail.com>"]
 edition = "2018"
 build = "build.rs"
+
+[lib]
+name = "desktop_lib"
 
 [dependencies]
 clap = "*"
