--- a/libs/mkdesktop-nautilus/Cargo.toml
+++ b/libs/mkdesktop-nautilus/Cargo.toml
@@ -4,4 +4,10 @@ version = "0.1.0"
 authors = ["Nigel Baillie <metreckk@gmail.com>"]
 edition = "2018"
 
+[lib]
+name = "mkdesktop_nautilus"
+crate-type = ["dylib"]
+nautilus-extension = "0.4.0"
+
 [dependencies]
+desktop_lib = { path = '../desktop_lib' }
